Update security and refresh config