@@ -6,7 +6,6 @@ import reactor.core.publisher.Mono;
 
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 @Service
 public class QuoteService {
@@ -32,7 +31,7 @@ public class QuoteService {
 	public Mono<Quote> getRandomQuoteByGenre(Genre genre) {
 		var quotesForGenre = quotes.stream()
 				.filter(q -> q.genre().equals(genre))
-				.collect(Collectors.toList());
+				.toList();
 		return Mono.just(quotesForGenre.get(random.nextInt(quotesForGenre.size() - 1)));
 	}
 
